@@ -10,6 +10,7 @@ https://github.com/Netflix/genie/issues/28
 https://github.com/Netflix/genie/issues/29
 https://github.com/Netflix/genie/issues/32
 https://github.com/Netflix/genie/issues/34
+https://github.com/Netflix/genie/issues/38
 
 Bug fixes:
 https://github.com/Netflix/genie/issues/20
